--- a/Server/NCS.ConsoleTest/Ncs.ConsoleTest.csproj
+++ b/Server/NCS.ConsoleTest/Ncs.ConsoleTest.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{65B157AB-FE40-48AB-B1FF-3752160D11FE}</ProjectGuid>
+    <ProjectGuid>{F384D91D-5368-4922-8A95-A33125757564}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>SuperSocketNetwork</RootNamespace>
-    <AssemblyName>SuperSocketNetwork</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <RootNamespace>Ncs.ConsoleTest</RootNamespace>
+    <AssemblyName>Ncs.ConsoleTest</AssemblyName>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CGDbuffer%28for CSharp%29">
+      <HintPath>..\DLL\CGDbuffer(for CSharp).dll</HintPath>
+    </Reference>
     <Reference Include="log4net, Version=1.2.13.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <HintPath>..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
     </Reference>
@@ -62,14 +65,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Function\ByteFunction.cs" />
-    <Compile Include="Ncs\NcsBuffer.cs" />
-    <Compile Include="Ncs\NcsInit.cs" />
-    <Compile Include="Ncs\NcsMain.cs" />
-    <Compile Include="Ncs\NcsReceiveFilter.cs" />
-    <Compile Include="Ncs\NcsRequestInfo.cs" />
-    <Compile Include="Ncs\NcsServer.cs" />
-    <Compile Include="Ncs\NcsUser.cs" />
+    <Compile Include="NcsTemplateBuffer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -78,6 +74,14 @@
     <None Include="Config\log4net.config" />
     <None Include="Config\log4net.unix.config" />
     <None Include="packages.config" />
+    <None Include="supersocket.cmd" />
+    <None Include="supersocket.sh" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NCS\Ncs.csproj">
+      <Project>{bdf17534-c585-4a4c-96b6-13579eb58c8a}</Project>
+      <Name>Ncs</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
