--- a/Client/C#/SuperSocketNetwork_WindowsForms/SuperSocketNetwork_WindowsForms.csproj
+++ b/Client/C#/SuperSocketNetwork_WindowsForms/SuperSocketNetwork_WindowsForms.csproj
@@ -34,19 +34,19 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CGDbuffer%28for CSharp%29">
-      <HintPath>..\..\DLL\CGDbuffer(for CSharp).dll</HintPath>
+      <HintPath>..\DLL\CGDbuffer(for CSharp).dll</HintPath>
     </Reference>
     <Reference Include="SuperSocket.ClientEngine.Common">
-      <HintPath>..\..\DLL\SuperSocket.ClientEngine.Common.dll</HintPath>
+      <HintPath>..\DLL\SuperSocket.ClientEngine.Common.dll</HintPath>
     </Reference>
     <Reference Include="SuperSocket.ClientEngine.Core">
-      <HintPath>..\..\DLL\SuperSocket.ClientEngine.Core.dll</HintPath>
+      <HintPath>..\DLL\SuperSocket.ClientEngine.Core.dll</HintPath>
     </Reference>
     <Reference Include="SuperSocket.ClientEngine.Protocol">
-      <HintPath>..\..\DLL\SuperSocket.ClientEngine.Protocol.dll</HintPath>
+      <HintPath>..\DLL\SuperSocket.ClientEngine.Protocol.dll</HintPath>
     </Reference>
     <Reference Include="SuperSocket.ClientEngine.Proxy">
-      <HintPath>..\..\DLL\SuperSocket.ClientEngine.Proxy.dll</HintPath>
+      <HintPath>..\DLL\SuperSocket.ClientEngine.Proxy.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
